--- a/Web/Site1.Master
+++ b/Web/Site1.Master
@@ -69,7 +69,7 @@
                                     <img class="brand-logo-dark" src="images/logo-default-194x20.png" alt="" width="194" height="20" srcset="images/logo-default-388x40.png 2x" /><img class="brand-logo-light" src="images/logo-default-inverse-134x41.png" alt="" width="134" height="41" srcset="images/logo-default-inverse-268x82.png 2x" /></a></div>
                             </div>
                             <div class="rd-navbar-nav-wrap">
-                                <p class="rd-navbar-slogan wow clipInLeft">6 year old me wanted to make games, I'm here to comply.</p>
+                                <p class="rd-navbar-slogan wow clipInLeft">Software: Where logic meets creativity.</p>
                                 <!-- RD Navbar Nav-->
                                 <ul class="rd-navbar-nav">
                                     <li class="rd-nav-item"><a class="rd-nav-link" href="Default.aspx">Home</a>
